Fix channel visibility description line-height

--- a/components/channel_visibility/stylesheets/channel_visibility.styl
+++ b/components/channel_visibility/stylesheets/channel_visibility.styl
@@ -1,7 +1,7 @@
 .channel-privacy
   font-size s_caption
   font-weight bold
-  line-height 2
+  line-height 1.5
 
   &__description
     font-weight normal
